@@ -57,6 +57,10 @@ class ConfigFormTranslations extends TranslationCollection
         'message_validate_password_2' => 'Het veld Wachtwoord bevat tekens die Acumulus verbiedt (`\'"#%&;<>\\). Weet u zeker dat u het juiste wachtwoord heeft ingetypt?',
         'message_validate_email_0' => 'Het veld Email is geen valide e-mailadres, vul uw eigen e-mailadres in.',
         'message_validate_email_1' => 'Het veld Email is verplicht, vul uw eigen e-mailadres in.',
+        'message_validate_nature_0' => 'Het veld \'Soort: wat verkoopt u?\' is verplicht, kies een waarde.',
+        'message_validate_digital_services_0' => 'Het veld \'Verkoopt u digitale diensten?\' is verplicht, kies een waarde.',
+        'message_validate_vat_free_products_0' => 'Het veld \'Verkoopt u van btw vrijgestelde producten of diensten?\' is verplicht, kies een waarde.',
+        'message_validate_margin_products_0' => 'Het veld \'Verkoopt u margegoederen?\' is verplicht, kies een waarde.',
         'message_validate_conflicting_shop_options_0' => 'Als u alleen producten verkoopt, kunt u geen digitale diensten verkopen. Pas één van deze opties aan.',
         'message_validate_conflicting_shop_options_1' => 'Als u alleen digitale diensten verkoopt, vink dan bij "Soort" aan dat u alleen diensten verkoopt.',
         'message_validate_conflicting_shop_options_2' => 'Als u alleen diensten verkoopt, kunt u geen margegoederen verkopen. Pas één van deze opties aan.',
@@ -385,6 +389,10 @@ Als u de eerste optie heeft uitgezet, geldt de tweede optie alleen voor uw zakel
         'message_validate_password_2' => 'The field Password contains a character that is forbidden by Acumulus (`\'"#%&;<>\\). Are you sure that you typed the correct password?',
         'message_validate_email_0' => 'The field Email is not a valid e-mail address, please fill in your own e-mail address.',
         'message_validate_email_1' => 'The field Email is required, please fill in your own e-mail address.',
+        'message_validate_nature_0' => 'The field \'Nature: what do you sell?\' is required, select a value.',
+        'message_validate_digital_services_0' => 'The field \'Do you sell digital services?\' is required, select a value.',
+        'message_validate_vat_free_products_0' => 'The field \'Do you sell VAT free products or services?\' is required, select a value.',
+        'message_validate_margin_products_0' => 'The field \'Do you sell products using the margin scheme?\' is required, select a value.',
         'message_validate_conflicting_shop_options_0' => 'If you only sell goods, you cannot sell digital services. change one of these options.',
         'message_validate_conflicting_shop_options_1' => 'If you only sell digital services, you should select that you only sell services on the "Nature" field.',
         'message_validate_conflicting_shop_options_2' => 'If you only sell services, you cannot sell using the margin scheme. change one of these options.',
